New updates from repl.it

--- a/data/index.html
+++ b/data/index.html
@@ -2,12 +2,41 @@
 <head>
 	<title>Savage Cabbage Bot</title>
 	<link rel="icon" href="./icon.jpg">
-	<link rel="stylesheet" type="text/css" href="./styling.css">
-
 	<meta charset="UTF-8">
 	<meta name="author" content="chocolatejade42">
 	<meta name="keywords" content="Discord,SavageCabbage,Python,DiscordPy">
 	<meta name="description" content="Savage Cabbage Discord Bot">
+  <style>
+    h1 {
+      color: #EAE0C7;
+      font-family: "Comic Sans MS", "cursive", "sans-serif";
+      text-align: center;
+      background-color: #013300
+    } p {
+      color: #EAE0C7;
+      font-family: "Comic Sans MS", "cursive", "sans-serif";
+      size: 200px
+    } body {
+      background-color: #01A300
+    } .navbar {
+      background-color: #EAE0C7;
+      position: fixed;
+      top: 0;
+      width: 100%
+    } .navbar img {
+      float: left
+    } .navbar a {
+      float: left;
+      display: block;
+      color: #013300;
+      font-family: "Comic Sans MS", cursive, sans-serif;
+      padding: 14px 16px;
+      text-decoration: none
+    } .navbar a:hover {
+      background: #01A300;
+      color: #EAE0C7
+    }
+  </style>
 </head>
 <body>
 	<div class="navbar">
